# tmc

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  INSTALL_SDL.md  README.md  xmake.lua
.github/workflows/: _build.yaml  ci.yaml  lint_pr.yml  sdl.yml
assets/: gfx_groups.json  palette_groups.json  palettes.json  tilemaps.json
build-game/: CMakeCache.txt  Makefile  cmake_install.cmake  tmc_sdl_test
docs/: sdl_port.md
include/: asm.h  global.h  map.h  room.h  save.h
include/gba/: defines.h  io_reg.h  m4a.h  macro.h  syscall.h
include/platform/: port.h
port/: port_animation.c  port_asset_index.c  port_asset_index.h  port_asset_loader.cpp  port_asset_loader.h  port_asset_pipeline.cpp  port_asset_pipeline.hpp  port_bios.c  port_draw.c  port_main.c  port_rom.c  port_rom.h  port_rom_tables.c  port_runtime_config.cpp  port_runtime_config.h
src/: affine.c  beanstalkSubtask.c  code_0805EC04.c  color.c  common.c  cutscene.c  eeprom.c  entity.c  fileselect.c  game.c  gameUtils.c  interrupts.c  kinstone.c  main.c  manager.c  npcUtils.c  physics.c  playerUtils.c  room.c  roomInit.c  screenTileMap.c  script.c  text.c  title.c  ui.c
src/enemy/: likeLike.c
src/gba/: m4a.c
src/manager/: delayedEntityLoadManager.c  diggingCaveEntranceManager.c  enterRoomTextboxManager.c  fightManager.c  lightRayManager.c
src/menu/: kinstoneMenu.c
src/object/: fileScreenObjects.c  fourElements.c  greatFairy.c  houseDoorExterior.c  lavaPlatform.c  lilypadSmall.c  titleScreenObject.c
src/platform/sdl/: audio.c  input.c  main.c  video.c
src/platform/shared/: agb_main_stub.c  asm_stubs.c  audio_ring.c  audio_ring.h  bios.c  dma.c  gba_memory.c  interrupts.c  m4a_host.c  m4a_stub.c  port_animation_minimal.c  port_asm_misc.c  port_bgm_data_stubs.c  port_collision_rom_data.c  port_entity_runtime.c  port_globals.c  port_headers_check.c  port_load_resource.c  port_log.c  port_map_data_provider.c  port_math.c  port_oam_renderer.c  port_random.c  port_rom_data_stubs.c  port_rom_data_types.h  port_roominit_graph_stubs.c  port_script_data_stubs.c  port_sfx_data_stubs.c  port_sfx_hexlow_data_stubs.c  port_sfx_named_data_stubs.c  port_text_data_stubs.c  port_text_unpacker.c  port_title_transitive_rom_data.c  port_ui_rom_data.c  port_unresolved_stubs.c  ram_silent_stubs.c  render.c  save_file.c  scripted_input.c
src/platform/shared/golden/: README.md  usa_off_frames30.txt  usa_on_frames30.txt
src/playerItem/: playerItemGust.c
src/worldEvent/: worldEvent12.c  worldEvent13.c  worldEvent14.c  worldEvent16.c  worldEvent17.c  worldEvent19.c  worldEvent20.c  worldEvent21.c  worldEvent22.c  worldEvent25.c
tools/port/: gen_host_assets.py
tools/src/assets_extractor/: assets_extractor.hpp  assets_extractor_main.cpp
